@@ -37,6 +37,12 @@ changes in sbcl-0.9.2 relative to sbcl-0.9.1:
     ** always return NIL from PPRINT-POP when OBJECT is NIL
     ** don't signal errors when pretty-printing malformed LABELS, 
        FLET or MACROLET forms
+    ** declarations in a DOLIST body are also in scope for the 
+       DOLIST return-form
+    ** COMPILE-FILE accepts all pathname designators as INPUT-FILE
+       and OUTPUT-FILE
+    ** the ELEMENT-TYPE keyword argument to WITH-OUTPUT-STREAM is 
+       always evaluated
 
 changes in sbcl-0.9.1 relative to sbcl-0.9.0:
   * fixed cross-compiler leakages that prevented building a 32-bit
